@@ -1,5 +1,10 @@
 2008-11-14  kitone  <kitone@gna.org>
 
+	* plugins/actions/errorchecking/ErrorCheckingPlugin.cc:
+	Fix: segfault with exit of SE if the windows is open.
+
+2008-11-14  kitone  <kitone@gna.org>
+
 	* src/SubtitleView.cc:
 	* src/utility.cc:
 	* src/utility.h:
